--- a/sections/compare-table.liquid
+++ b/sections/compare-table.liquid
@@ -53,6 +53,7 @@
                 
                 
                 <div class="comparison-table">
+                  <div class="table-wrapper">
                     <table>
                         <tr class="th-ligne">
                             <td class="first-tab-item">The Details</td>
@@ -127,6 +128,7 @@
                     {%- endfor -%}
                     </table>
                   </div>
+                </div>
 
 
 
