add resize effect

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @media screen and (min-width: 1000px) {
   .template--product-Yonder-dev .sticky-product-gallery product-gallery {
-    --product-gallery-thumbnail-size: 6.2rem;
+    --product-gallery-thumbnail-size: 6.25rem;
     -moz-column-gap: 2.438rem;
          column-gap: 2.438rem;
     position: sticky;
@@ -710,80 +710,152 @@
 }
 
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating] {
-  margin-block-end: 0.813rem;
+  -webkit-margin-after: 0.813rem;
+          margin-block-end: 0.813rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating] {
-    margin-block-end: 1.188rem;
+    -webkit-margin-after: 1.188rem;
+            margin-block-end: 1.188rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2) {
-  margin-block-start: 0rem;
-  margin-block-end: 1.063rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.063rem;
+          margin-block-end: 1.063rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2) {
-    margin-block-end: 1.063rem;
+    -webkit-margin-after: 1.063rem;
+            margin-block-end: 1.063rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price] {
-  margin-block-start: 0rem;
-  margin-block-end: 1.25rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.25rem;
+          margin-block-end: 1.25rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price] {
-    margin-block-end: 1.375rem;
+    -webkit-margin-after: 1.375rem;
+            margin-block-end: 1.375rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(even) {
-  margin-block-start: 0rem;
-  margin-block-end: 1.75rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.75rem;
+          margin-block-end: 1.75rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(even) {
-    margin-block-end: 1.375rem;
+    -webkit-margin-after: 1.375rem;
+            margin-block-end: 1.375rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations] {
-  margin-block-start: 0rem;
-  margin-block-end: 1.625rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.625rem;
+          margin-block-end: 1.625rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations] {
-    margin-block-end: 1.188rem;
+    -webkit-margin-after: 1.188rem;
+            margin-block-end: 1.188rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] {
-  margin-block-start: 0rem;
-  margin-block-end: 2.25rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 2.25rem;
+          margin-block-end: 2.25rem;
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb {
-  margin-block-end: 1.438rem;
+  -webkit-margin-after: 1.438rem;
+          margin-block-end: 1.438rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] {
-    margin-block-end: 2.188rem;
+    -webkit-margin-after: 2.188rem;
+            margin-block-end: 2.188rem;
   }
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb {
-    margin-block-end: 1.563rem;
+    -webkit-margin-after: 1.563rem;
+            margin-block-end: 1.563rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .block-product-feature_with_icon_v2 {
-  margin-block-start: 0rem;
-  margin-block-end: 2.313rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 2.313rem;
+          margin-block-end: 2.313rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .block-product-feature_with_icon_v2 {
-    margin-block-end: 2.063rem;
+    -webkit-margin-after: 2.063rem;
+            margin-block-end: 2.063rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group] {
-  margin-block-start: 0rem;
-  margin-block-end: 2.05rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 2.05rem;
+          margin-block-end: 2.05rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group] {
-    margin-block-end: 2.05rem;
+    -webkit-margin-after: 2.05rem;
+            margin-block-end: 2.05rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .template--product-Yonder-dev {
+    /* Create a shadow effect at the bottom of the scroller */
+    /* Show top shadow when at the top */
+    /* Show bottom shadow when at the bottom */
+    /* Hide top shadow when not at the top */
+    /* Hide bottom shadow when not at the bottom */
+  }
+  .template--product-Yonder-dev .product-gallery__thumbnail-list product-gallery-navigaion-scroller {
+    row-gap: 10px;
+  }
+  .template--product-Yonder-dev .product-gallery__thumbnail-list::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 50px; /* Set the desired shadow height */
+    background: linear-gradient(rgb(255, 255, 255), rgba(0, 0, 0, 0));
+    pointer-events: none;
+    z-index: 2;
+  }
+  .template--product-Yonder-dev .product-gallery__thumbnail-list::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 50px; /* Set the desired shadow height */
+    background: linear-gradient(rgb(255, 255, 255), rgba(0, 0, 0, 0));
+    pointer-events: none;
+    transform: rotate(180deg);
+    z-index: 2;
+  }
+  .template--product-Yonder-dev .product-gallery__thumbnail-list.at-top::before {
+    display: block;
+  }
+  .template--product-Yonder-dev .product-gallery__thumbnail-list.at-bottom::after {
+    display: block;
+  }
+  .template--product-Yonder-dev .product-gallery__thumbnail-list:not(.at-top)::before {
+    display: none;
+  }
+  .template--product-Yonder-dev .product-gallery__thumbnail-list:not(.at-bottom)::after {
+    display: none;
   }
 }
 
@@ -847,7 +919,8 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .multi-column-with-text-v2 .main-stack-container .section-header .prose p {
-  margin-block-start: 1rem;
+  -webkit-margin-before: 1rem;
+          margin-block-start: 1rem;
   color: #343434;
   text-align: center;
   font-family: Nunito Sans;
@@ -901,7 +974,8 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .multi-column-with-text-v2 .main-stack-container .multi-column__item .text-part .content-part {
-  margin-block-start: 0.688rem;
+  -webkit-margin-before: 0.688rem;
+          margin-block-start: 0.688rem;
 }
 .multi-column-with-text-v2 .main-stack-container .multi-column__item .text-part .content-part p {
   color: #343434;
@@ -957,7 +1031,8 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-block-start: 1.5rem;
+  -webkit-margin-before: 1.5rem;
+          margin-block-start: 1.5rem;
 }
 @media screen and (max-width: 769px) {
   .shopify-section--text-with-icons-v2 .section-header .prose p {
@@ -995,13 +1070,18 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   border-radius: 22px;
   border: 1px solid #343434;
   background: #EFEFEF;
-  padding-block-start: 2.563rem;
-  padding-block-end: 2rem;
+  -webkit-padding-before: 2.563rem;
+          padding-block-start: 2.563rem;
+  -webkit-padding-after: 2rem;
+          padding-block-end: 2rem;
 }
 @media screen and (max-width: 769px) {
   .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item {
-    padding-block-start: 2.563rem;
-    padding-block-end: 2rem;
+    min-width: initial;
+    -webkit-padding-before: 2.563rem;
+            padding-block-start: 2.563rem;
+    -webkit-padding-after: 2rem;
+            padding-block-end: 2rem;
   }
 }
 .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item .constrained-image {
@@ -1066,12 +1146,14 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-block-start: 1.5rem;
+  -webkit-margin-before: 1.5rem;
+          margin-block-start: 1.5rem;
 }
 @media screen and (max-width: 769px) {
   .comparatif-table-section .section-header .prose p {
     font-size: 16px;
-    margin-block-start: 1rem;
+    -webkit-margin-before: 1rem;
+            margin-block-start: 1rem;
   }
 }
 .comparatif-table-section .section-header .prose h2 {
@@ -1099,6 +1181,11 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
     font-size: 24px;
     letter-spacing: 4.8px;
     padding-inline: 2rem;
+  }
+}
+@media only screen and (max-width: 990px) {
+  .comparatif-table-section .main-stack-container {
+    row-gap: 2rem;
   }
 }
 @media screen and (max-width: 990px) {
@@ -1163,6 +1250,7 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   width: auto;
   vertical-align: middle;
   display: initial;
+  filter: brightness(4);
 }
 @media only screen and (max-width: 768px) {
   .comparatif-table-section table td img {
@@ -1250,7 +1338,7 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   font-family: Nunito Sans;
   font-size: 20px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 34.803px; /* 174.014% */
   text-transform: uppercase;
 }
@@ -1266,7 +1354,7 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
 }
 @media only screen and (min-width: 991px) {
   .comparatif-table-section .comparison-table tr:first-child td {
-    padding: 1rem 1.3rem;
+    padding: 1rem 1.3rem 1rem 1.5rem;
   }
 }
 @media only screen and (min-width: 991px) {
@@ -1294,6 +1382,6 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
   .comparatif-table-section .comparison-table th,
   .comparatif-table-section .comparison-table td {
-    padding: 2rem 1.3rem;
+    padding: 1rem 1.3rem 1rem 1.5rem;
   }
 }
