--- a/sections/compare-table.liquid
+++ b/sections/compare-table.liquid
@@ -141,7 +141,7 @@
   
   {% schema %}
   {
-    "name": "Campare table",
+    "name": "Compare table",
     "class": "shopify-section--multi-column comparatif-table-section",
     "tag": "section",
     "disabled_on": {
