--- a/src/scss/components/icon-with-text.scss
+++ b/src/scss/components/icon-with-text.scss
@@ -62,7 +62,7 @@
             padding-block-start: 2.563rem;
             padding-block-end: 2rem;
             @media screen and (max-width: 769px) {
-                //min-width:18.75rem;
+                min-width: initial;
                 padding-block-start: 2.563rem;
                 padding-block-end: 2rem;
             }
