--- a/assets/custom-sections.js.liquid
+++ b/assets/custom-sections.js.liquid
@@ -223,7 +223,16 @@ class ProductPersonalizerWrapper extends HTMLElement {
                 }
               });
             }
-            
+            // Get all the span elements inside the key_layout div
+            const spanElements = cloneDiv.querySelectorAll('.key_layout span');
+
+            // Add a click event listener to each span
+            spanElements.forEach(span => {
+              span.addEventListener('click', () => {
+                // Hide the parent key_layout div when a span is clicked
+                cloneDiv.querySelector('.key_layout').style.display = 'none';
+              });
+            });
 
             //recalculate pplr account 
             cloneDiv.querySelector('input[type="text"]').addEventListener('input',(e)=>{
@@ -356,16 +365,13 @@ class SwiperComponent extends HTMLElement {
 
     // Configure Swiper with the retrieved options
     const swiperOptions = {
-      slidesPerView: 1.3,
+        slidesPerView: 1.2,
+        centeredSlides: true,
         spaceBetween: 20,
         freeMode: true,
         grabCursor: true,
         loop: true,
         autoHeight:true,
-        autoplay: {
-          delay: 3000,
-          disableOnInteraction: false,
-        },
         pagination: {
           el: ".swiper-pagination",
           clickable: true
@@ -378,12 +384,15 @@ class SwiperComponent extends HTMLElement {
             slidesPerView: 3
           },
           1024: {
+            centeredSlides: false,
             slidesPerView: 3.5
           },
           1320: {
+            centeredSlides: false,
             slidesPerView: 4.5
           },
           1600: {
+            centeredSlides: false,
             slidesPerView: 5
           }
         }
@@ -395,3 +404,79 @@ class SwiperComponent extends HTMLElement {
 }
 
 customElements.define('swiper-component', SwiperComponent);
+
+
+import {ProductGalleryNavigation} from "{{ 'theme.js' | asset_url }}"; // Import the theme web component
+
+// Extend it
+class ProductGalleryScroller extends ProductGalleryNavigation {
+  constructor() {
+    super();
+  }
+
+  connectedCallback() {
+    this.handleResize()
+    window.addEventListener('resize', this.handleResize);
+  }
+
+  handleResize(){
+    if (window.innerWidth > 999) {
+      this.observeContainerAndMeasureHeight();
+      this.scrollEffect()
+    }
+  }
+  scrollEffect(){
+    this.addEventListener('scroll', () => {
+      this.scrollCalculator()
+    });
+    this.scrollCalculator()
+  }
+
+  scrollCalculator(){
+    const scrollTop = this.scrollTop;
+    const scroller = document.querySelector('.product-gallery__thumbnail-list');
+      const scrollHeight = this.scrollHeight;
+      const clientHeight = this.clientHeight;
+      // Calculate the available space for scrolling
+      const availableScrollSpace = scrollHeight - clientHeight;
+
+    // Show/hide top shadow when at the bottom
+    if (scrollTop === availableScrollSpace || scrollTop > 0) {
+      scroller.classList.add('at-top');
+    }
+    
+    else {
+      scroller.classList.remove('at-top');
+    }
+
+    // Show/hide bottom shadow when there's enough space to scroll
+    if (availableScrollSpace > 0 && availableScrollSpace > scrollTop) {
+      scroller.classList.add('at-bottom');
+    } else {
+      scroller.classList.remove('at-bottom');
+    }
+  }
+
+  observeContainerAndMeasureHeight() {
+  const container = document.querySelector('.product-gallery__media.is-initial');
+
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        // The container is in the viewport, and the image is likely rendered
+        const containerHeight = container.getBoundingClientRect().height;
+        this.style.maxHeight=`${containerHeight}px`
+        // You can do additional actions here, like removing the observer
+        // if you no longer need it.
+        observer.disconnect();
+      }
+    });
+  });
+  observer.observe(container);
+}
+
+
+}
+
+// Create the custom elements
+window.customElements.define('product-gallery-navigaion-scroller', ProductGalleryScroller);
