--- a/src/scss/components/caomparatif-table.scss
+++ b/src/scss/components/caomparatif-table.scss
@@ -45,18 +45,11 @@
         }
     }
 
-        // .comparison-table {
-        //     table-layout: init;
-        //     width: 100%;
-        //     border-collapse: collapse;
-        //     border-spacing: 0;
-        //     font-size: 0.75rem;
-        //     @media only screen and (max-width: 990px){
-        //       padding: 0 var(--gutter-mobile);
-              
-        //     }
-    
-        //   }
+        .main-stack-container{
+            @media only screen and (max-width: 990px){
+              row-gap: 2rem;
+            }
+          }
           .comparison-table{
                @media screen and (max-width:990px) {
                 .table-wrapper:not(.u-NoScrollbar) {
@@ -113,6 +106,7 @@
                 width: auto;
                 vertical-align: middle;
                 display: initial;
+                filter: brightness(4);
                 @media only screen and (max-width: 768px){
                   height: 20px;
                 }
@@ -195,7 +189,7 @@
             font-family: Nunito Sans;
             font-size: 20px;
             font-style: normal;
-            font-weight: 600;
+            font-weight: 500;
             line-height: 34.803px; /* 174.014% */
             text-transform: uppercase;
             @media only screen and (max-width: 990px){
@@ -211,7 +205,7 @@
           .comparison-table tr:first-child {
             td{
               @media only screen and (min-width: 991px){
-                padding: 1rem 1.3rem;
+                padding: 1rem 1.3rem 1rem 1.5rem;
               }
             }
             td:nth-child(2), td:nth-child(3) {
@@ -245,7 +239,7 @@
             
             .comparison-table th,
             .comparison-table td {
-              padding: 2rem 1.3rem;
+              padding: 1rem 1.3rem 1rem 1.5rem;
             }
           }
 }
